# audio-transcoder-lame

./: Cargo.toml  Dockerfile  README.md  build.rs
examples/: example.rs
examples/sampledata/: hello_rust_tts
src/: convertor.rs  convertor_win_mock.rs  lame_ffi.rs  lib.rs
tests/: integration_test.rs
