[package]
name = "audio-transcoder-lame"
version = "0.1.0"
authors = ["abezecny"]
edition = "2018"
links = "mp3lame"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gcc"]

[build-dependencies]
gcc = { version = "0.3.50", optional = true }

[dependencies]
libc = "0.2.80"
base64 = "0.13.0"
dasp = {version = "0.11.0", features = ["interpolate", "signal", "interpolate-sinc", "ring_buffer", "interpolate-linear"] }
